<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference android:title="@string/pref_title_version">
        <intent android:action="android.settings.SYNC_SETTINGS"/>
    </Preference>

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_mode_titles"
        android:entryValues="@array/pref_mode_values"
        android:key="@string/pref_key_mode"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_mode"/>

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_filters"
        android:inputType="textCapWords"
        android:key="@string/pref_key_filters"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_filters"/>

    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/pref_key_pair"
        android:summary="@string/pref_descript_pair"
        android:title="@string/pref_title_pair"/>

    <EditTextPreference
        android:defaultValue="@string/pref_default_pincode"
        android:inputType="number"
        android:key="@string/pref_key_pincode"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_pincode"/>

    <SwitchPreference
        android:defaultValue="true"
        android:key="@string/pref_key_unpair"
        android:summary="@string/pref_descript_unpair"
        android:title="@string/pref_title_unpair"/>

</PreferenceScreen>
